--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "license": "MIT",
   "dependencies": {
@@ -37,8 +38,10 @@
           "config": {
             "repository": {
               "owner": "stefvanhooijdonk",
-              "name": "roon-steelseries-tray"
-            }
+              "name": "roon-steelseries-nowplaying-tray"
+            },
+            "prerelease": false,
+            "draft": false
           }
         }
       ],
