[SCOUT] disable auto update

--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "osxSign": {}
+
+      },
       "publishers": [
         {
           "name": "@electron-forge/publisher-github",
