--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roon-steelseries-tray",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Show Roon Zones and now playing in tray, and send it to the SteelSeries Oled Screens via GameSense",
   "repository": "https://github.com/stefvanhooijdonk/roon-steelseries-nowplaying-tray",
   "main": "app.js",
@@ -32,8 +32,7 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {
-      },
+      "packagerConfig": {},
       "publishers": [
         {
           "name": "@electron-forge/publisher-github",
