--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
+    "discord-rpc": "^3.2.0",
     "electron-log": "^5.0.0-beta.16",
     "electron-squirrel-startup": "^1.0.0",
     "node-roon-api": "github:roonlabs/node-roon-api",
@@ -27,8 +28,8 @@
     "@electron-forge/cli": "^6.0.5",
     "@electron-forge/maker-dmg": "^6.0.5",
     "@electron-forge/maker-squirrel": "^6.0.5",
+    "@electron-forge/maker-zip": "^6.0.5",
     "@electron-forge/publisher-github": "^6.0.5",
-    "@electron-forge/maker-zip":"^6.0.5",
     "appdmg": "^0.6.6",
     "electron": "^23.1.4"
   },
